Bug 409435 - fixing contrast on tooltip dialogs

--- a/bundles/org.eclipse.orion.client.ui/web/css/ide.css
+++ b/bundles/org.eclipse.orion.client.ui/web/css/ide.css
@@ -193,7 +193,7 @@ textarea.parameterInput {
 }
 
 .parameterPopup > label{
-	color: #333;
+	color: whitesmoke;
 }
 
 .parameterPopup > input{
